--- a/site/Module 2 assignment.html
+++ b/site/Module 2 assignment.html
@@ -15,7 +15,7 @@
 		}
 
 		#menu {
-			background-color: #3379FF;
+			background-color: #2289CE;
 			float: right;
 			width: 50px;
 			height: 35px;
