--- a/Module3coding/CSS/index.html
+++ b/Module3coding/CSS/index.html
@@ -28,15 +28,15 @@
           <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs"> 
             <li>
-              <a href="#"> Noodle</a>
+              <a href="#Noodle"> Noodle</a>
             </li>
 
             <li>
-              <a href="#"> Sushi</a>
+              <a href="#Sushi"> Sushi</a>
             </li>
 
             <li>
-              <a href="#"> Vegetables</a>
+              <a href="#Vegetables"> Vegetables</a>
             </li>
             
           </ul> <!--#nav-list-->
@@ -51,6 +51,23 @@
     <section>
       <div id="Noodle">Noodle</div>
       <p>Inspired by Japanese ramen noodle in Tokyo. Eating and reading anime Naruto comic books. Then walk to Shibuya train station to see Hachiko inu statue. A very loyal Akita dog who lived from 1923 to 1935. Hachiho is a symbol of loyalty around the world, especially in Asia. The noodles served at our restaurant are mixed with vegetables and use veggie broth. The atmosphere at our ramen shop is very cozy and serene. Other than special Japanese ramen, we serve several kinds of noodle combination: mushroom, veggie mix, Javanese noodle, Hongkong noodle, and Singaporean noodle.</p>
+    </section>
+  </div>
+
+  <div class="col-md-12 col-sm-12 col-xs-12" id="p1">  
+    <section>
+      <div id="Sushi">Sushi</div>
+      <p>Our sushi chef was trained in Tokyo. There are several different kinds of suchi served. Dragon sushi, California rolls, cucumber and avocado sushi. We use the best sushi rice combined with sticky sweet rice and best seaweed from Japan & Korea.</p>
+    </section>
+   </div> 
+
+  <div class="col-md-12 col-sm-12 col-xs-12" id="p1">
+    <section>
+      <div id="Vegetables">Vegetables</div>
+      <p>Our resto and cafe serve vegetarian menus. Tofu, tempe, gudeg, vegetables curries.</p>
+    </section>
+  </div>
+</div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="https://code.jquery.com/jquery-2.1.4.js" integrity="sha256-siFczlgw4jULnUICcdm9gjQPZkw/YPDqhQ9+nAOScE4=" crossorigin="anonymous"></script>
