--- a/site/index.html
+++ b/site/index.html
@@ -1,211 +1,40 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Assignment solution for Module 2</title>
-	<style>
-* {
-	box-sizing: border-box;
-}
-		
-		h1 {
-			margin-bottom: 18px;
-			text-align: center;
-		}
-
-		#menu {
-			background-color: #3379FF;
-			float: right;
-			width: 50px;
-			height: 35px;
-			margin-right: 23px;
-			margin-top: 12px;
-		}
-			
-		p {
-			border: 2px solid black;			
-			width: 90%;
-			height: 125px;
-			margin-left: auto;
-			margin-right: auto;
-			font-family: Verdana;
-			color: black;
-			font-size: 12px;		
-		}
-		
-		#p1 {
-			background-color: #33EAFF;
-			height: 125px;	
-		}
-		
-		#p2 {
-			background-color: #C3D9DC;
-			height: 125px;
-		}
-
-		#p3 {
-			background-color: pink;
-			height: 125px;	
-		}
-
-		.row {
-			width: 100%;
-		}
-
-/*For large device*/
-@media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
-}
-
-/*for medium device*/
-@media (min-width: 768px) and (max-width: 991px) {
-	
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-  }
-
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-/*for small device*/
-@media (max-width: 767px)  {
-	
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-    float: left;
-  }
-
-  .col-sm-1 {
-    width: 8.33%;
-  }
-  .col-sm-2 {
-    width: 16.66%;
-  }
-  .col-sm-3 {
-    width: 25%;
-  }
-  .col-sm-4 {
-    width: 33.33%;
-  }
-  .col-sm-5 {
-    width: 41.66%;
-  }
-  .col-sm-6 {
-    width: 50%;
-  }
-  .col-sm-7 {
-    width: 58.33%;
-  }
-  .col-sm-8 {
-    width: 66.66%;
-  }
-  .col-sm-9 {
-    width: 74.99%;
-  }
-  .col-sm-10 {
-    width: 83.33%;
-  }
-  .col-sm-11 {
-    width: 91.66%;
-  }
-  .col-sm-12 {
-    width: 100%;
-  }
-}
-
-
-</style>		
-</head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Food, LLC</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  </head>
 <body>
-	<h1>Our menu</h1>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="index.html" class="pull-left visible-md visible-lg">
+            <div id="logo-img"></div>
+          </a>
 
-<div class="row">
-  	<div class="col-lg-3 col-md-6 col-sm-12"><p id="menu">Salad</p>
-  		<div><p id="p1">There are several different salad in the menu: a few kinds of Indonesian traditional salad, Greek salad, caesar salad, homesytle, traditional Japanese ginger.</p></div>
-	</div>
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food, LLC</h1></a>
+            <p>Our menu</p>
+          </div>
 
-  	<div class="col-lg-3 col-md-6 col-sm-12"><p id="menu">Pastry</p>
-  		<div><p id="p2">Banana chocolate bread, nagasari, Japanese cheesecake, pandan chiffon cake, fried plantain, cassava lindri, sagu, klepon, sesame sweet rice with green bean or red bean filling.</p></div>
-  	</div>
 
-  	<div class="col-lg-3 col-md-12 col-sm-12"><p id="menu">Bubble tea</p>
-  		<div><p id="p3">Blueberry flavor, mathca green tea, classic pearl black tea, brown sugar flavor, strawberry, mango, taro, durian, and lychee flavor. All come with tapioca pearl of your choice.</p></div>
-  	</div>
- </div>
- 
+        </div>
+      </div>
+    </nav>
+
+  </header>
+
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
-
