--- a/Module4coding/index.html
+++ b/Module4coding/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <h1>Module 4 Solution</h1>
+  <div>
+  <p> Please right click on the page, then click on Inspect. Then click on Console.</p>
+  </div>
 </body>
 </html>
